--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -15,10 +15,10 @@ jobs:
         run: docker compose up -d --build
 
       - name: Wait for application to start
-        run: sleep 40
+        run: sleep 20
 
       - name: Test application endpoint
-        run: curl -f http://localhost:3000
+        run: curl http://localhost:3000
 
       - name: Show container logs
         run: docker compose logs
